--- a/src/contact.html
+++ b/src/contact.html
@@ -127,7 +127,7 @@
         <div class="container mx-auto">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                 <!-- Form -->
-                <div class=" bg-blue-600 md:ml-5 md:mt-4 lg:pt-8 lg:p-4 md:p-1 rounded">
+                <div class="md:h-2/6  lg:h-2/5 bg-blue-600 md:ml-5 md:mt-4 lg:pt-8 lg:p-4 md:p-1 rounded">
                     <form action="" class="lg:mt-5 md:mt-8 px-8">
                         <div class="felx flex-col items-center justify-center">
                             <div class="ml-16">
