--- a/src/contact.html
+++ b/src/contact.html
@@ -119,7 +119,7 @@
         </nav>
     </header>
 
-    <div class="items-center lg:mx-20 max-w-screen-xl mx-auto">
+    <div class="items-center lg:mx-20">
         <div class="flex items-center justify-center text-4xl font-bold  py-4">
             <p>Contact Us</p>
         </div>
@@ -127,7 +127,7 @@
         <div class="container mx-auto">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                 <!-- Form -->
-                <div class=" bg-blue-600 md:ml-5 md:mt-4 lg:pt-8 lg:p-4 md:p-1 rounded">
+                <div class="registration-form bg-blue-600 md:h-2/6  lg:h-2/5 md:ml-5 md:mt-4 lg:pt-8 lg:p-4 md:p-1 rounded">
                     <form action="" class="lg:mt-5 md:mt-8 px-8">
                         <div class="felx flex-col items-center justify-center">
                             <div class="ml-16">
@@ -348,7 +348,10 @@
             </button>
         </div>
     </div>
-
+    <!-- WhatsApp -->
+    <div>  
+        <img src="../assets/whatsapplogo.png" width="60px" height="60px" alt="" class="fixed  bottom-0" onclick="openWhatsApp()">
+    </div>
     <footer id="id1" class="px-4 md:px-10" style="background-color:#2B354C;">
         <div class="grid grid-cols-2 text-white max-w-screen-xl mx-auto">
             <div class="flex justify-between mt-4">
